version3-adding user profile and delete
